@@ -1,4 +1,5 @@
 {{ $NEXT }}
+    - fix missing es_version when using Search::Elasticsearch 5.02 (RT#121186)
 
 0.003     2016-11-18 10:31:40+01:00 Europe/Vienna
     - now asynchronous
